[package]
name = "turnstile"
version = "0.1.0"
authors = ["Christian Wood <cwood@tpt.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9.20"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"